--- a/Frontend - Organi/assets/css/pages/blog/blog.css
+++ b/Frontend - Organi/assets/css/pages/blog/blog.css
@@ -17,7 +17,7 @@
 
 @font-face {
    font-family: myFourthFont;
-   src: url(../../../fonts/Poppins//Poppins-ExtraLightItalic.ttf);
+   src: url(../../../fonts/Poppins/Poppins-Regular.ttf);
 }
 
 /* FONTS-END */
@@ -27,154 +27,154 @@
 /* ANIMATIONS-START */
 @keyframes blink {
    50% {
-      color: rgb(0, 194, 0)
+       color: rgb(0, 194, 0)
    }
 }
 
 @keyframes blink-facebook {
    50% {
-      color: rgb(17, 0, 255);
+       color: rgb(17, 0, 255);
    }
 }
 
 @keyframes blink-twitter {
    50% {
-      color: rgb(0, 247, 255);
+       color: rgb(0, 247, 255);
    }
 }
 
 @keyframes blink-instagram {
    50% {
-      color: rgb(200, 14, 224);
+       color: rgb(200, 14, 224);
    }
 }
 
 @keyframes blink-linked-in {
    50% {
-      color: rgb(28, 20, 148);
+       color: rgb(28, 20, 148);
    }
 }
 
 @keyframes blink-pinterest {
    50% {
-      color: rgb(211, 101, 119)
+       color: rgb(211, 101, 119)
    }
 }
 
 @keyframes blink-youtube {
    50% {
-      color: rgb(255, 0, 0)
+       color: rgb(255, 0, 0)
    }
 }
 
 @keyframes blink-google {
    50% {
-      color: rgb(255, 123, 0)
+       color: rgb(255, 123, 0)
    }
 }
 
 @keyframes blink-menu {
    50% {
-      color: white;
+       color: white;
    }
 }
 
 @keyframes text {
 
    from {
-      left: 120px;
+       left: 120px;
    }
 
    to {
-      left: 0;
+       left: 0;
    }
 }
 
 @keyframes info {
 
    from {
-      top: 100px;
+       top: 100px;
    }
 
    to {
-      top: 0;
+       top: 0;
    }
 }
 
 @keyframes animation-text-on-image1 {
 
    from {
-      top: 500px;
+       top: 500px;
    }
 
    to {
-      top: 133px
+       top: 133px
    }
 }
 
 @keyframes animation-text-on-image2 {
 
    from {
-      top: 500px;
+       top: 500px;
    }
 
    to {
-      top: 150px
+       top: 150px
    }
 }
 
 @keyframes glide1 {
    from {
-      top: 100px;
-      left: 0;
+       top: 100px;
+       left: 0;
    }
 
    to {
-      top: 140px;
-      left: 0;
+       top: 140px;
+       left: 0;
    }
 }
 
 @keyframes glide2 {
    from {
-      top: 50px;
-      right: 0;
+       top: 50px;
+       right: 0;
 
    }
 
    to {
-      top: 0;
-      right: 0;
+       top: 0;
+       right: 0;
    }
 }
 
 @keyframes text-effect {
    10% {
-      opacity: 0.5;
+       opacity: 0.5;
    }
 
    20% {
-      opacity: 1;
+       opacity: 1;
    }
 
    80% {
-      opacity: 1;
-      top: 0;
+       opacity: 1;
+       top: 0;
    }
 
    90% {
-      opacity: 0.5;
+       opacity: 0.5;
    }
 
    100% {
-      opacity: 0;
-      top: 100px;
+       opacity: 0;
+       top: 100px;
    }
 }
 
 @keyframes border-animation {
    50% {
-      border-color: rgb(9, 223, 9);
+       border-color: rgb(9, 223, 9);
    }
 }
 
@@ -482,16 +482,16 @@
    display: flex;
    list-style-type: none;
    margin: 0;
-   gap: 75px;
+   gap: 90px;
    padding: 0;
-   margin-left: 80px;
+   margin-left: 50px;
 }
 
 #header .down-side .menu ul li {
    cursor: pointer;
 }
 
-#header .down-side .menu ul li a {
+#header .down-side .menu ul a {
    font-family: myFirstFont;
    font-size: 17px;
    text-decoration: none;
@@ -511,7 +511,7 @@
    width: 100%;
 }
 
-#header .down-side .menu ul li a:hover {
+#header .down-side .menu ul a:hover {
    color: green
 }
 
@@ -541,7 +541,7 @@
    padding-bottom: 32px;
 }
 
-#header .down-side .drop-down svg{
+#header .down-side .drop-down svg {
    position: absolute;
    top: 4px;
    right: -22px;
@@ -583,6 +583,7 @@
    position: relative;
    display: flex;
    gap: 15%;
+   margin-left: 60px;
 }
 
 #header .down-side .info .title span:nth-child(1) {
